--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 
 
           <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
+          <li><%= link_to "Ajuda",    help_path %></li>
         <!--  <li><%= link_to "Login", login_path %></li> -->
           
 
