--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -10,6 +10,7 @@
       <center>
       	<img id="animar" src="/assets/animacoes/help/help1.png" width="1100px"/>
       	<img id="animar" src="/assets/animacoes/help/help2.png" width="1100px"/>
+        <img id="animar" src="/assets/animacoes/help/help3.png" width="1100px"/>
 
       </center>
     
